# internal/mods/basis/dto/login.go
@@ -23,6 +23,8 @@ type (
 	LogoutResponse       = pb.LogoutResponse
 	RefreshRequest       = pb.RefreshRequest
 	RefreshResponse      = pb.RefreshResponse
+	RegisterRequest      = pb.RegisterRequest
+	RegisterResponse     = pb.RegisterResponse
 	CurrentMenusRequest  = pb.CurrentMenusRequest
 	CurrentMenusResponse = pb.CurrentMenusResponse
 	CurrentUserRequest   = pb.CurrentUserRequest
@@ -30,11 +32,12 @@ type (
 )
 
 type LoginRepo interface {
-	Login(ctx context.Context, in *LoginRequest) (*LoginResponse, error)
-	Logout(ctx context.Context, in *LogoutRequest) (*LogoutResponse, error)
-	Refresh(ctx context.Context, in *RefreshRequest) (*RefreshResponse, error)
 	CaptchaID(ctx context.Context, in *CaptchaIDRequest) (*CaptchaIDResponse, error)
 	CaptchaImage(ctx context.Context, id string, reload bool) (*CaptchaImageResponse, error)
 	CurrentMenus(ctx context.Context, in *CurrentMenusRequest) (*CurrentMenusResponse, error)
 	CurrentUser(ctx context.Context, in *CurrentUserRequest) (*CurrentUserResponse, error)
+	Login(ctx context.Context, in *LoginRequest) (*LoginResponse, error)
+	Logout(ctx context.Context, in *LogoutRequest) (*LogoutResponse, error)
+	Refresh(ctx context.Context, in *RefreshRequest) (*RefreshResponse, error)
+	Register(ctx context.Context, in *RegisterRequest) (*RegisterResponse, error)
 }
